# browser-use-ipl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/: mcp.json
