[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipl-mcp-server"
version = "0.1.0"
description = "IPL MCP Server with SSE support"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "mcp>=0.1.0",
    "browser-use>=0.1.31",
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-json-logger>=2.0.7",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
